src/test/ui/consts/const-eval/issue-52475.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/issue-52475.rs:6:17
   |
LL |             n = (n + 1) % 5;
   |                 ^^^^^^^^^^^ exceeded interpreter step limit (see `#[const_eval_limit]`)

error: failed to evaluate the given constant
  --> $DIR/issue-52475.rs:2:18
   |
LL |       let _ = [(); {
   |  __________________^
LL | |         let mut x = &0;
LL | |         let mut n = 0;
LL | |         while n < 5 {
...  |
LL | |         0
LL | |     }];
   | |_____^

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-52475.rs:6:17
   |
LL |             n = (n + 1) % 5;
   |                 ^^^^^^^^^^^ exceeded interpreter step limit (see `#[const_eval_limit]`)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
